--- a/Mrozik.WinFormsBarCodeScanner/packages.config
+++ b/Mrozik.WinFormsBarCodeScanner/packages.config
@@ -4,4 +4,5 @@
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net452" />
   <package id="OpenTK.GLControl" version="1.1.2225.0" targetFramework="net452" />
   <package id="ZedGraph" version="5.1.5" targetFramework="net452" />
+  <package id="ZXing.Net" version="0.14.0.1" targetFramework="net452" />
 </packages>
