--- a/Mrozik.WinFormsBarCodeScanner/Mrozik.WinFormsBarCodeScanner.csproj
+++ b/Mrozik.WinFormsBarCodeScanner/Mrozik.WinFormsBarCodeScanner.csproj
@@ -88,6 +88,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecognizedBarCode.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RecognizedBarCode.Designer.cs">
+      <DependentUpon>RecognizedBarCode.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BarCodeScannerForm.resx">
       <DependentUpon>BarCodeScannerForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,6 +107,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RecognizedBarCode.resx">
+      <DependentUpon>RecognizedBarCode.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
